--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "joi": "^14.3.1",
     "knex": "^0.16.3",
     "morgan": "~1.9.0",
     "pg": "^7.7.1"
