--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
     "morgan": "~1.9.0",
     "pg": "^7.7.1"
