--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
     "morgan": "~1.9.0",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
